@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1132 2003/06/18 00:48:30 lculik Exp $
+ * $Id: ChangeLog,v 1.1133 2003/06/18 08:57:00 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-06-18 20:20 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+  * source/vm/hvm.c
+  * source/vm/classes.c
+    - put all references to profiler under #ifdef __PROFILER__ loop in order
+      to be consistent with default compiler flags where __PROFILER__ is not
+      defined.
 
 2003-06-18 01:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbcomp.h
